[gd_scene load_steps=8 format=2]

[ext_resource path="res://resources/city_drawing.jpg" type="Texture" id=1]
[ext_resource path="res://fonts/Roboto/Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/Roboto/Roboto-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://resources/Menu-Selection-sound.mp3" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 42
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1444.0
margin_top = -425.407
margin_right = 476.002
margin_bottom = 854.593
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxColor" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -268.0
margin_right = 268.0
margin_bottom = 513.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -160.0
margin_right = 160.0
margin_bottom = 409.0
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuTitle" type="Label" parent="VBoxContainer2"]
margin_right = 320.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 1 )
text = "Menú"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer2"]
margin_top = 110.0
margin_right = 320.0
margin_bottom = 166.0

[node name="IniciarJuegoButton" type="Button" parent="VBoxContainer2/CenterContainer"]
margin_right = 320.0
margin_bottom = 56.0
rect_min_size = Vector2( 320, 0 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "1. Iniciar juego"
align = 0

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer2"]
margin_top = 191.0
margin_right = 320.0
margin_bottom = 247.0

[node name="ConfigurarButton" type="Button" parent="VBoxContainer2/CenterContainer2"]
margin_right = 320.0
margin_bottom = 56.0
rect_min_size = Vector2( 320, 0 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "2. Configurar"
align = 0

[node name="CenterContainer3" type="CenterContainer" parent="VBoxContainer2"]
margin_top = 272.0
margin_right = 320.0
margin_bottom = 328.0

[node name="DificultadButton" type="Button" parent="VBoxContainer2/CenterContainer3"]
margin_right = 320.0
margin_bottom = 56.0
rect_min_size = Vector2( 320, 0 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "3. Dificultad"
align = 0

[node name="CenterContainer5" type="CenterContainer" parent="VBoxContainer2"]
margin_top = 353.0
margin_right = 320.0
margin_bottom = 409.0

[node name="ComoJugarButton" type="Button" parent="VBoxContainer2/CenterContainer5"]
margin_right = 320.0
margin_bottom = 56.0
rect_min_size = Vector2( 320, 0 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "4. Cómo jugar"
align = 0

[node name="CenterContainer4" type="CenterContainer" parent="VBoxContainer2"]
margin_top = 434.0
margin_right = 320.0
margin_bottom = 490.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SalirButton" type="Button" parent="VBoxContainer2/CenterContainer4"]
margin_right = 320.0
margin_bottom = 56.0
rect_min_size = Vector2( 320, 0 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "5. Salir del juego"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="pressed" from="VBoxContainer2/CenterContainer/IniciarJuegoButton" to="." method="_on_IniciarJuegoButton_pressed"]
[connection signal="pressed" from="VBoxContainer2/CenterContainer2/ConfigurarButton" to="." method="_on_ConfigurarButton_pressed"]
[connection signal="pressed" from="VBoxContainer2/CenterContainer3/DificultadButton" to="." method="_on_DificultadButton_pressed"]
[connection signal="pressed" from="VBoxContainer2/CenterContainer5/ComoJugarButton" to="." method="_on_ComoJugarButton_pressed"]
[connection signal="button_up" from="VBoxContainer2/CenterContainer4/SalirButton" to="." method="_on_SalirButton_button_up"]
[connection signal="finished" from="SelectionSound" to="." method="_on_SelectionSound_finished"]
